added logo and changed the mod id

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ org.gradle.parallel=true
 # Mod Properties
 	mod_version = 0.0.1
 	maven_group = com.example
-	archives_base_name = telegrambot
+	archives_base_name = telemine
 
 # Dependencies
 	fabric_version=0.67.0+1.19.2
