--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,6 +10,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Set up Java
         uses: actions/setup-java@v2
+        with:
+          java-version: 17
       - name: Build the JAR
         run: |
           ./gradlew build
