--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: 17
-          distribution: 'oracle'
+          distribution: 'temurin'
       - name: Build the JAR
         run: |
           ./gradlew build
